ADD_SUBDIRECTORY(level1)

ADD_EXECUTABLE(bblat2 bblat2.f90)
ADD_EXECUTABLE(bblat3 bblat3.f90)

TARGET_LINK_LIBRARIES(bblat2
    PRIVATE
    LPF::BLAS
    $<$<BOOL:NEED_LINKING_AGAINST_LIBM>:${LIBM_NAME}>
)

TARGET_INCLUDE_DIRECTORIES(bblat2
    PRIVATE
    ${PROJECT_BINARY_DIR}/src
    ${PROJECT_SOURCE_DIR}/src
    $<$<BOOL:LPF_HAVE_FP16>:${PROJECT_SOURCE_DIR}/src/bf16>
)

TARGET_LINK_LIBRARIES(bblat3
    PRIVATE
    LPF::BLAS
    $<$<BOOL:NEED_LINKING_AGAINST_LIBM>:${LIBM_NAME}>
)

TARGET_INCLUDE_DIRECTORIES(bblat3
    PRIVATE
    ${PROJECT_BINARY_DIR}/src
    ${PROJECT_SOURCE_DIR}/src
    $<$<BOOL:LPF_HAVE_FP16>:${PROJECT_SOURCE_DIR}/src/bf16>
)


add_test(NAME BLAS-BF16-bblat2 COMMAND "${CMAKE_COMMAND}"
    -DTEST=$<TARGET_FILE:bblat2>
    -DINPUT=${CMAKE_CURRENT_SOURCE_DIR}/bblat2.in
    -DOUTPUT=${CMAKE_CURRENT_BINARY_DIR}/bblat2.out
    -DINTDIR=${CMAKE_CFG_INTDIR}
    -P "${CMAKE_CURRENT_SOURCE_DIR}/../runtest.cmake")

add_test(NAME BLAS-BF16-bblat3 COMMAND "${CMAKE_COMMAND}"
    -DTEST=$<TARGET_FILE:bblat3>
    -DINPUT=${CMAKE_CURRENT_SOURCE_DIR}/bblat3.in
    -DOUTPUT=${CMAKE_CURRENT_BINARY_DIR}/bblat3.out
    -DINTDIR=${CMAKE_CFG_INTDIR}
    -P "${CMAKE_CURRENT_SOURCE_DIR}/../runtest.cmake")

