ADD_SUBDIRECTORY(level1)

ADD_EXECUTABLE(hblat2 hblat2.f90)
ADD_EXECUTABLE(hblat3 hblat3.f90)

TARGET_LINK_LIBRARIES(hblat2
    PRIVATE
    LPF::BLAS
    $<$<BOOL:NEED_LINKING_AGAINST_LIBM>:${LIBM_NAME}>
)

TARGET_INCLUDE_DIRECTORIES(hblat2
    PRIVATE
    ${PROJECT_BINARY_DIR}/src
    ${PROJECT_SOURCE_DIR}/src
    $<$<BOOL:LPF_HAVE_FP16>:${PROJECT_SOURCE_DIR}/src/fp16>
)

TARGET_LINK_LIBRARIES(hblat3
    PRIVATE
    LPF::BLAS
    $<$<BOOL:NEED_LINKING_AGAINST_LIBM>:${LIBM_NAME}>
)

TARGET_INCLUDE_DIRECTORIES(hblat3
    PRIVATE
    ${PROJECT_BINARY_DIR}/src
    ${PROJECT_SOURCE_DIR}/src
    $<$<BOOL:LPF_HAVE_FP16>:${PROJECT_SOURCE_DIR}/src/fp16>
)


add_test(NAME BLAS-FP16-hblat2 COMMAND "${CMAKE_COMMAND}"
    -DTEST=$<TARGET_FILE:hblat2>
    -DINPUT=${CMAKE_CURRENT_SOURCE_DIR}/hblat2.in
    -DOUTPUT=${CMAKE_CURRENT_BINARY_DIR}/hblat2.out
    -DINTDIR=${CMAKE_CFG_INTDIR}
    -P "${CMAKE_CURRENT_SOURCE_DIR}/../runtest.cmake")

add_test(NAME BLAS-FP16-hblat3 COMMAND "${CMAKE_COMMAND}"
    -DTEST=$<TARGET_FILE:hblat3>
    -DINPUT=${CMAKE_CURRENT_SOURCE_DIR}/hblat3.in
    -DOUTPUT=${CMAKE_CURRENT_BINARY_DIR}/hblat3.out
    -DINTDIR=${CMAKE_CFG_INTDIR}
    -P "${CMAKE_CURRENT_SOURCE_DIR}/../runtest.cmake")

