SET(SRC
    bgemm.c
    bgemm_fp32.c
    bgemmtr.c
    bsymm.c
    bsyr2k.c
    bsyrk.c
    btrmm.c
    btrsm.c
)


ADD_LIBRARY(bf16_level3 OBJECT ${SRC})

TARGET_COMPILE_DEFINITIONS(bf16_level3 PRIVATE
    $<$<BOOL:${LPF_INTEGER8}>:-DLPF_INTEGER8>
    $<$<BOOL:${USE_BLAS_HGEMM}>:-DUSE_BLAS_HGEMM>
    $<$<BOOL:${USE_BLAS_GEMM_F16F16F32}>:-DUSE_BLAS_GEMM_F16F16F32>
    $<$<BOOL:${USE_BLAS_GEMM_BF16BF16F32}>:-DUSE_BLAS_GEMM_BF16BF16BF32>
    $<$<BOOL:${USE_BLAS_AMD_GEMM_BF16BF16F32}>:-DUSE_BLAS_AMD_GEMM_BF16BF16BF32>
    $<$<BOOL:${BLAS_IS_MKL}>:-DBLAS_IS_MKL>
)

if (LPF_USE_LTO)
    set_property(TARGET bf16_level3 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()


TARGET_INCLUDE_DIRECTORIES(bf16_level3
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/src/bf16
)

TARGET_LINK_LIBRARIES(bf16_level3 PRIVATE LPF::LPF $<$<BOOL:${BLAS_IS_MKL}>:BLAS::BLAS> )
