SET(SRC
    hgemm.c
    hgemm_fp32.c
    hgemmtr.c
    hsymm.c
    hsyr2k.c
    hsyrk.c
    htrmm.c
    htrsm.c
)


ADD_LIBRARY(fp16_level3 OBJECT ${SRC})

TARGET_COMPILE_DEFINITIONS(fp16_level3 PRIVATE
    $<$<BOOL:${LPF_INTEGER8}>:-DLPF_INTEGER8>
    $<$<BOOL:${USE_BLAS_HGEMM}>:-DUSE_BLAS_HGEMM>
    $<$<BOOL:${USE_BLAS_GEMM_F16F16F32}>:-DUSE_BLAS_GEMM_F16F16F32>
    $<$<BOOL:${USE_BLAS_GEMM_BF16BF16F32}>:-DUSE_BLAS_GEMM_BF16BF16BF32>
    $<$<BOOL:${USE_BLAS_AMD_GEMM_BF16BF16F32}>:-DUSE_BLAS_AMD_GEMM_BF16BF16BF32>
    $<$<BOOL:${BLAS_IS_MKL}>:-DBLAS_IS_MKL>
)

if (LPF_USE_LTO)
    set_property(TARGET fp16_level3 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()


TARGET_INCLUDE_DIRECTORIES(fp16_level3
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/src/fp16
)

TARGET_LINK_LIBRARIES(fp16_level3 PRIVATE LPF::LPF $<$<BOOL:${BLAS_IS_MKL}>:BLAS::BLAS> )
