SET(SRC
    hgemm.c
    hgemm_fp32.c
    hgemmtr.c
    hsymm.c
    hsyr2k.c
    hsyrk.c
    htrmm.c
    htrsm.c
)


ADD_LIBRARY(fp16_level3 OBJECT ${SRC})

TARGET_COMPILE_DEFINITIONS(fp16_level3 PRIVATE
    $<$<BOOL:${LPF_INTEGER8}>:-DLPF_INTEGER8>
    $<$<BOOL:${LPF_BLAS_IS_MKL}>:-DLPF_BLAS_IS_MKL>
    $<$<BOOL:${LPF_BLAS_USE_HGEMM}>:-DLPF_BLAS_USE_HGEMM>
    $<$<BOOL:${LPF_BLAS_USE_GEMM_F16F16F32}>:-DLPF_BLAS_USE_GEMM_F16F16F32>
)

if (LPF_USE_LTO)
    set_property(TARGET fp16_level3 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()


TARGET_INCLUDE_DIRECTORIES(fp16_level3
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/src/fp16
)

TARGET_LINK_LIBRARIES(fp16_level3 PRIVATE LPF::LPF $<$<BOOL:${BLAS_FOUND}>:BLAS::BLAS> )
