SET(SRC
    scale_diag_twoside.f90
)
ADD_LIBRARY(fp16_scaling OBJECT ${SRC})

if (LPF_USE_LTO)
    set_property(TARGET fp16_scaling PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

TARGET_COMPILE_DEFINITIONS(fp16_scaling PRIVATE
    $<$<BOOL:${LPF_INTEGER8}>:-DLPF_INTEGER8>
)
TARGET_LINK_LIBRARIES(fp16_scaling PUBLIC LPF::LPF)

TARGET_INCLUDE_DIRECTORIES(fp16_scaling
    PRIVATE
    ${PROJECT_SOURCE_DIR}/src
)

